# HTTP-server

./: .env  .gitignore  Dockerfile  README.md  create_debpkg_client.sh  create_debpkg_server.sh  docker-compose.yml  init.sql
.github/workflows/: ci.yaml
client/: CMakeLists.txt
client/src/: client.h  main.cpp
nginx/: nginx.conf
server/: CMakeLists.txt  Dockerfile
server/src/: Database.cpp  Database.hpp  HTTPServer.cpp  HTTPServer.hpp  Routers.cpp  Routers.hpp  main.cpp
server/tests/: add_users.sh  get_users_by_id.sh  test.sh
src/: HTTPServer.hpp  Routers.cpp  Routers.hpp
tests/: add_users.sh  delete_users.sh  get_all_users.sh
weather_service/: Dockerfile  weather_service.py
